course details overlapping issue fixes

--- a/app/assets/styles/modules/_academicProgram.scss
+++ b/app/assets/styles/modules/_academicProgram.scss
@@ -36,7 +36,7 @@
 
 	.academic-bg-wrap {		
 
-		@include atSize424 {
+		@media (max-width: 700px) {
 			margin-top: 30px;
 			position: relative;
     top: 120px;
